test/negative/auto_in_type_alias.cg
type Bad = auto;

fn uses(_: Bad) -> () { () }

fn main() -> i32 { 0 }

